--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,13 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">  
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"> 
+    <link rel="stylesheet" href="./theme.min.css"> 
     <title>YGO Database</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="background-image: url('bg.jpg');"></div>
+    <!-- <div id="root"></div> -->
   </body>
 </html>
